--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
-index
+
+<!DOCTYPE html>
+<head>
+<style>
+/*
+* Skeleton V2.0.4
+* Copyright 2014, Dave Gamache
+* www.getskeleton.com
+* Free to use under the MIT license.
+* http://www.opensource.org/licenses/mit-license.php
+* 12/29/2014
+*/
+
+
+/* Table of contents
+––––––––––––––––––––––––––––––––––––––––––––––––––
+- Grid
+- Base Styles
+- Typography
+- Links
+- Buttons
+- Forms
+- Lists
+- Code
+- Tables
+- Spacing
+- Utilities
+- Clearing
+- Media Queries
+*/
+
+
+/* Grid
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box; }
+.column,
+.columns {
+  width: 100%;
+  float: left;
+  box-sizing: border-box; }
+
+/* For devices larger than 400px */
+@media (min-width: 400px) {
+  .container {
+    width: 85%;
+    padding: 0; }
+}
+
+/* For devices larger than 550px */
+@media (min-width: 550px) {
+  .container {
+    width: 80%; }
+  .column,
+  .columns {
+    margin-left: 4%; }
+  .column:first-child,
+  .columns:first... {html {font-size: 13px;}}
+@media (min-width: 768px) {html {font-size: 14px;}}
+@media (min-width: 992px) {html {font-size: 15px;}}
+@media (min-width: 1200px) {html {font-size: 16px;}}
+
+
+
+.tags-regles,
+.tags-lore,
+.tags-generateur {
+    padding: 0 5px;
+}
+
+.tags-regles {background: blue;}
+.tags-lore {background: black; color: white;}
+.tags-generateur {background: red;}
+
+
+
+
+
+
+
+
+</style>
+<script type="text/javascript">
+
+</script>
+</head>
+<body>
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Alter/Mundi</title>
+</head>
+<body>
+
+
+<div class="container">
+
+
+    <h2>Titre</h2>
+
+    <ol>
+        <li><a href="">titre</a></li>
+    </ol>
+
+    <details id="" open>
+        <summary>
+            Summary
+            <span class="tags-regles">regles</span>
+            <span class="tags-lore">lore</span>
+            <span class="tags-generateur">generateur</span>
+        </summary>
+
+        <p>Detailed content goes here …</p>
+    </details>
+
+
+
+
+</div>
+
+</body>
+</html>
+</body>
