--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
 </style>
 
+
+  <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+
 </head>
 <body>
 
