--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
 
 	<style>
+		body {
+		    font-size: calc(15px + 0.390625vw);
+		}
+		
 		.tags-regles,
 		.tags-lore,
 		.tags-generateur {
