--- a/index.html
+++ b/index.html
@@ -28,30 +28,35 @@
 
 	
 <body>
-
-
-<div class="container">
-    <h2>Titre</h2>
-
-    <ol>
-        <li><a href="">titre</a></li>
-    </ol>
-
-    <details id="" open>
-        <summary>
-            Summary
-            <span class="tags-regles">regles</span>
-            <span class="tags-lore">lore</span>
-            <span class="tags-generateur">generateur</span>
-        </summary>
-
-        <p>Detailed content goes here …</p>
-    </details>
-
-
-
-
-</div>
+	
+	<div class="container"> <!-- debut container -->
+	  <div class="columns">
+	    <div class="column col-12">
+			<h2>Titre</h2>
+		</div>
+	
+		<div class="column col-12">
+			<ol>
+		        <li><a href="">titre</a></li>
+		    </ol>
+		</div>
+	
+		  <div class="column col-12">
+			<details id="" open>
+		        <summary>
+		            Summary
+		            <span class="tags-regles">regles</span>
+		            <span class="tags-lore">lore</span>
+		            <span class="tags-generateur">generateur</span>
+		        </summary>
+		
+		        <p>Detailed content goes here …</p>
+		    </details>
+		  </div>
+	
+		  
+	  </div>
+	</div> <!-- fin container -->
 
 </body>
 </html>
