--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 		  font-size: calc(0.75em + 1vmin);
 		}
 		
-		.tags-regles,
-		.tags-lore,
-		.tags-generateur {
+		.tags {
 		    padding: 0 5px;
+			border-radius: 30px;
 		}
-		
-		.tags-regles {background: blue;}
-		.tags-lore {background: black; color: white;}
-		.tags-generateur {background: red;}
+
+		.tags-lore {background: #58C8F2;}
+		.tags-regles {background: #F5A9B8;}
+		.tags-generateur {background: #FFFFFF;}
 	</style>
 </head>
 
@@ -45,9 +44,9 @@
 			<details id="" open>
 		        <summary>
 		            Summary
-		            <span class="tags-regles">regles</span>
-		            <span class="tags-lore">lore</span>
-		            <span class="tags-generateur">generateur</span>
+					<span class="tags tags-lore">lore</span>
+		            <span class="tags tags-regles">regles</span>
+		            <span class="tags tags-generateur">generateur</span>
 		        </summary>
 		
 		        <p>Detailed content goes here …</p>
