--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 		}
 		
 		.tags {
-		    padding: 0 5px;
-			border-radius: 30px;
+			padding: 5px 25px;
+		    border-radius: 30px;
+		    border: .5px solid black;
 		}
 
 		.tags-lore {background: #58C8F2;}
@@ -43,7 +44,7 @@
 		  <div class="column col-12">
 			<details id="" open>
 		        <summary>
-		            Summary
+		            Summary </br>
 					<span class="tags tags-lore">lore</span>
 		            <span class="tags tags-regles">regles</span>
 		            <span class="tags tags-generateur">generateur</span>
