--- a/index.html
+++ b/index.html
@@ -55,16 +55,46 @@
 				<table class="table table-striped table-hover">
 				  <thead>
 				    <tr>
-				      <th>name</th>
-				      <th>genre</th>
-				      <th>release date</th>
+				      <th></th>
+				      <th>partie du corps</th>
+				      <th>malus</th>
 				    </tr>
 				  </thead>
 				  <tbody>
 				    <tr class="active">
-				      <td>The Shawshank Redemption</td>
-				      <td>Crime, Drama</td>
-				      <td>14 October 1994</td>
+				      <td>1</td>
+				      <td>tete</td>
+				      <td>int -10</td>
+				    </tr>
+
+					<tr>
+				      <td>2</td>
+				      <td>torse</td>
+				      <td>sag -10</td>
+				    </tr>
+
+					<tr class="active">
+				      <td>3</td>
+				      <td>bras gauche</td>
+				      <td>for -10</td>
+				    </tr>
+
+					<tr>
+				      <td>4</td>
+				      <td>bras droit</td>
+				      <td>for -10</td>
+				    </tr>
+
+					<tr class="active">
+				      <td>5</td>
+				      <td>jambe gauche</td>
+				      <td>agi -10</td>
+				    </tr>
+
+					<tr>
+				      <td>6</td>
+				      <td>jambe droite</td>
+				      <td>agi -10</td>
 				    </tr>
 				  </tbody>
 				</table>
