--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		  <div class="column col-12">
 			<details id="" open>
 		        <summary>
-		            Summary </br>
+		            <h2>Summary</h2> 
+					</br>
 					<span class="tags tags-lore">lore</span>
 		            <span class="tags tags-regles">regles</span>
 		            <span class="tags tags-generateur">generateur</span>
