--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	
 	<div class="container"> <!-- debut container -->
 	  <div class="columns">
-	    <div class="column col-12">
-			<h2>Titre</h2>
-		</div>
+		  <div class="column col-12">
+			<h1>Alter/Mundi</h1>
+		  </div>
 	
 		<div class="column col-12">
 			<ol>
@@ -44,7 +44,7 @@
 		  <div class="column col-12">
 			<details id="" open>
 		        <summary>
-		            <h2>Summary</h2> 
+		            Summary
 					</br>
 					<span class="tags tags-lore">lore</span>
 		            <span class="tags tags-regles">regles</span>
