--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 	<style>
 		body {
-			font-size: calc(0.75em + 1vmin);
+			padding-bottom: 50px;
+			font-size: calc(1em + 1vmin);
 			/*background-image: url("https://images.antiquemapsandprints.com/scansr1/P-6-015296a.jpg");
 			background-position: center; 
 			background-repeat: no-repeat; 
@@ -132,11 +133,9 @@
 			<div class="column col-10 col-mx-auto"> <!-- Debut GENERATEUR -->
 				<details id="generateurs" open>
 					<summary>
-						<span class="sum-title">Le Lore</span>
-						<span class="tags tags-lore">lore</span>
+						<span class="sum-title">Les generateurs</span>
+						<span class="tags tags-generateur">generateurs</span>
 					</summary>
-			
-					<h2>Les generateurs</h2>
 
 					<p>
 						les generateurs sont des tableaux qui permettent d'aider voir de se passer d'un mj (et ainsi avoir un joueur de plus autour de la table)
