--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
 
 	<style>
+		/*CUSTOM SPECTRE*/
+		.table.table-hover tbody tr:hover {
+		    background: #8eb0e4;
+		}
+
+
+
 		body {
 			padding-bottom: 50px;
 			font-size: calc(1em + 1vmin);
@@ -58,7 +65,7 @@
 					<ol>
 						<li><a href="#regles-fichepersonnage">La fiche personnage</a></li>
 						<li><a href="#regles-stats">Les stats</a></li>
-						<li><a href="#reges-alterespece">Les Alter-especes</a></li>
+						<li><a href="#regles-alterespece">Les Alter-especes</a></li>
 					</ol>
 					<li><a href="#generateurs">Les generateurs</a></li>
 				</ol>
