--- a/lore.html
+++ b/lore.html
@@ -1,1 +1,75 @@
+<!doctype html>
+<html lang="fr">
+<head>
+	<meta charset="utf-8">
+	<title>Alter/Mundi</title>
 
+	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+
+	<style>
+		/*CUSTOM SPECTRE*/
+		p {
+		    margin: 0 0 3rem;
+		}
+
+
+		/* CSS */
+		body {
+			padding-bottom: 50px;
+			font-size: calc(1em + 1vmin);
+			/*background-image: url("https://images.antiquemapsandprints.com/scansr1/P-6-015296a.jpg");
+			background-position: center; 
+			background-repeat: no-repeat; 
+			background-size: cover;*/
+			/*background: linear-gradient(to right, rgb(213, 44, 0), rgb(226, 150, 136), rgb(255, 255, 255) 45%, rgb(255, 255, 255), rgb(255, 255, 255) 55%, rgb(210, 127, 164), rgb(162, 2, 98));*/
+		}
+
+		.column {background: #FFFFFF;}
+		
+		.sum-title {
+    		text-decoration: underline;
+    		font-weight: bold;
+		} 	
+	</style>
+</head>
+	
+<body>
+	
+	<div class="container"> <!-- debut container -->
+		<div class="columns">
+			<div class="column col-10 col-mx-auto">
+				<h1>Alter/Mundi - Lore</h1>
+			</div>
+	
+			<div class="column col-10 col-mx-auto">
+				<ol>
+					<li><a href="#lore">Le lore</a></li>
+					<ol>
+						<li><a href="#lore-1">Subtitle</a></li>
+					</ol>
+
+					<li><a href="#regles">Les regles</a></li>
+					<li><a href="#generateurs">Les generateurs</a></li>
+				</ol>
+			</div>
+	
+
+
+			
+			<div class="column col-10 col-mx-auto"> <!-- debut LORE -->
+				<h2 id="lore" class="sum-title">Le Lore</h2>
+					
+				<p>
+					un monde victorien, l'empire britannique, les années 1800.
+					Une alter humanité, peupler de vampire, loup-garou et autre demon.
+				</p>
+			</div> <!-- fin LORE -->
+
+		  
+		</div>
+	</div> <!-- fin container -->
+
+</body>
+</html>
