--- a/index.html
+++ b/index.html
@@ -2,37 +2,13 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Alter/Mundi</title>
+	<title>Alter/Mundi - Manifeste</title>
 
 	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
 
-	<style>
-		/*CUSTOM SPECTRE*/
-		p {
-		    margin: 0 0 3rem;
-		}
-
-
-		/* CSS */
-		body {
-			padding-bottom: 50px;
-			font-size: calc(1em + 1vmin);
-			/*background-image: url("https://images.antiquemapsandprints.com/scansr1/P-6-015296a.jpg");
-			background-position: center; 
-			background-repeat: no-repeat; 
-			background-size: cover;*/
-			/*background: linear-gradient(to right, rgb(213, 44, 0), rgb(226, 150, 136), rgb(255, 255, 255) 45%, rgb(255, 255, 255), rgb(255, 255, 255) 55%, rgb(210, 127, 164), rgb(162, 2, 98));*/
-		}
-
-		.column {background: #FFFFFF;}
-		
-		.sum-title {
-    		text-decoration: underline;
-    		font-weight: bold;
-		} 	
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 	
 <body>
@@ -40,29 +16,30 @@
 	<div class="container"> <!-- debut container -->
 		<div class="columns">
 			<div class="column col-10 col-mx-auto">
-				<h1>Alter/Mundi - Manifeste</h1>
+				<h1 class="sum-title">Manifeste</h1>
 			</div>
 	
 			
 	
 
 			<div class="column col-10 col-mx-auto"> <!-- debut Manifeste -->
-				<h2 id="lore" class="sum-title">Le Manifeste</h2>
-					
-				<p>
+				<p class="text-center">
 					un monde victorien, l'empire britannique, les années 1800.
 					Une alter humanité, peupler de vampire, loup-garou et autre demon.
 				</p>
 			</div> <!-- fin Manifeste -->
 
 
-
+			<div class="column col-8 col-mx-auto">
+				<div class="custom-divider">Alter/Mundi</div>
+			</div>
 
 			<div class="column col-10 col-mx-auto">
-				<ol>
-					<li><a href="lore.html">Le lore</a></li>
-					<li><a href="regles.html">Les regles</a></li>
-					<li><a href="generateurs.html">Les generateurs</a></li>
+				<ol class="nav">
+					<li class="nav-item active"><a href="index.html">Le manifeste</a></li>
+					<li class="nav-item active"><a href="lore.html">Le lore</a></li>
+					<li class="nav-item active"><a href="regles.html">Les regles</a></li>
+					<li class="nav-item active"><a href="generateurs.html">Les generateurs</a></li>
 				</ol>
 			</div>
 
