--- a/generateurs.html
+++ b/generateurs.html
@@ -12,6 +12,8 @@
 </head>
 	
 <body>
+
+	<a href="generateurs.html" class="btn btn-action s-circle btt"><i class="icon icon-arrow-up"></i></a>
 	
 	<div class="container"> <!-- debut container -->
 		<div class="columns">
